--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "plotly.js": "^2.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
     "react-plotly.js": "^2.5.1",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.5",
+    "victory": "^36.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
